Mesaj Guncelleme Commiti

--- a/MVCTeknolojikMarketYonetimPaneli/Views/Mesaj/SohbetiGosterIki.cshtml
+++ b/MVCTeknolojikMarketYonetimPaneli/Views/Mesaj/SohbetiGosterIki.cshtml
@@ -1,7 +1,7 @@
 ﻿@using MVCTeknolojikMarketYonetimPaneli.Models.Model
+@using MVCTeknolojikMarketYonetimPaneli.Models.EkModel
 
-@model List<SOHBET_Result>
-
+@model Tuple<List<SOHBET_Result>, TBL_MESAJPERYON, Class1>
 
 
 @{
@@ -9,8 +9,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
 
-@foreach (var x in Model)
+        window.onload = function () {
+            alert('@ViewBag.Message');
+        };
+    </script>
+}
+
+@foreach (var x in Model.Item1)
 {
 
     if (x.MESAJYON == true)
@@ -56,11 +65,23 @@
 
     }
 
-
-
-
-
 }
 
 
 
+@using (Html.BeginForm("SohbetiGosterIki", "Mesaj", FormMethod.Post))
+{
+
+
+    @Html.TextAreaFor(m => m.Item2.MESAJICERIGI, new { rows = "5", @class = "form-control" })
+    @Html.ValidationMessageFor(m => m.Item2.MESAJICERIGI, "", new { @style = "color:red" })
+
+    @Html.HiddenFor(m => m.Item2.MESAJBASLIGI, new { Value = @Model.Item3.MesajBaslik })
+    @Html.ValidationMessageFor(m => m.Item2.MESAJBASLIGI, "", new { @style = "color:red" })
+
+    @Html.HiddenFor(m => m.Item3.MesajId)
+
+    <br />
+    <button class="btn btn-success">Gönder</button>
+
+}
