--- a/MVCTeknolojikMarketYonetimPaneli/Views/Mesaj/SohbetiGoster.cshtml
+++ b/MVCTeknolojikMarketYonetimPaneli/Views/Mesaj/SohbetiGoster.cshtml
@@ -1,14 +1,25 @@
 ﻿@using MVCTeknolojikMarketYonetimPaneli.Models.Model
+@using MVCTeknolojikMarketYonetimPaneli.Models.EkModel
 
-@model List<SOHBET_Result>
+@model Tuple<List<SOHBET_Result>,TBL_MESAJPERYON,Class1>
 
 @{
     ViewBag.Title = "SohbetiGoster";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
 
-@foreach (var x in Model)
+        window.onload = function () {
+            alert('@ViewBag.Message');
+        };
+    </script>
+}
+
+
+@foreach (var x in Model.Item1)
 {
     
    if (x.MESAJYON == true)
@@ -54,10 +65,22 @@
 
    }
 
-
-
-
-
 }
 
 
+@using (Html.BeginForm("SohbetiGoster", "Mesaj", FormMethod.Post))
+{
+
+    
+    @Html.TextAreaFor(m => m.Item2.MESAJICERIGI, new { rows = "5", @class = "form-control" })
+    @Html.ValidationMessageFor(m => m.Item2.MESAJICERIGI, "", new { @style = "color:red" })
+
+    @Html.HiddenFor(m => m.Item2.MESAJBASLIGI, new { Value = @Model.Item3.MesajBaslik })
+    @Html.ValidationMessageFor(m => m.Item2.MESAJBASLIGI, "", new { @style = "color:red" })
+
+    @Html.HiddenFor(m=> m.Item3.MesajId)
+    
+    <br />
+    <button class="btn btn-success">Gönder</button>
+
+}
